--- a/Css/main.css
+++ b/Css/main.css
@@ -1,4 +1,4 @@
-#map-canvas {
+/*#map-canvas {
         width: 500px;
         height: 400px;
       }
@@ -19,4 +19,22 @@
 .col-md-8{
   padding-left: 20px;
   margin-left: 20px;
+}*/
+
+.test, .test2{
+  margin: 0 auto;
+  /*width: 33%;*/
+  display: inline-block;
+  vertical-align: top;
+  width: 300px;
+  
+  /*text-align: center;*/
+}
+
+.test {
+  margin-right: 100px;
+}
+
+#sidebar {
+  display:block;
 }
