Added imgs for index page pop events

--- a/Css/main.css
+++ b/Css/main.css
@@ -55,3 +55,8 @@ body {
   background-color: #FFB984;
   /*color: #FFFADA;*/  /*Used to change color of titles of drop down menus, ie Featured Artists.*/
 }
+
+.col-md-3 img{
+  width: 150px;
+  height: 150px;
+}
