--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,13 @@ html {
   font-size: 28px;
   padding: 0 0 0 0;
   margin: 0 0 0 0;
+  color: inherit;
+}
+
+.title-text:hover {
+  color: inherit;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .body-container {
@@ -196,4 +203,8 @@ html {
 .story img{
   width: 100px;
   height: 100px;
+}
+
+.breadcrumbs {
+  
 }
