--- a/css/main.css
+++ b/css/main.css
@@ -208,3 +208,13 @@ html {
 .breadcrumbs {
   
 }
+
+.navbar > .container-fluid {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
+#navbar {
+  padding-left: 0px;
+  padding-right: 0px;
+}
