--- a/css/breadcrumbs.css
+++ b/css/breadcrumbs.css
@@ -11,7 +11,7 @@ html, body {min-height: 100%;}
 	/*centering*/
 	display: inline-block;
 	overflow: hidden;
-	border: 1px solid #e7e7e7;
+	border: 1px solid #bbb;
 	border-radius: 5px;
 	/*Lets add the numbers for each link using CSS counters. flag is the name of the counter. to be defined using counter-reset in the parent element of the links*/
 	counter-reset: flag; 
@@ -107,7 +107,7 @@ html, body {min-height: 100%;}
 
 
 .flat a, .flat a:after {
-	background: white;
+	background: blac;
 	color: black;
 	transition: all 0.5s;
 }
