--- a/css/main.css
+++ b/css/main.css
@@ -15,10 +15,55 @@
   width: 100%;
   height: auto;
 }
-
+.small-carousel{
+  padding-left: 0px;
+}
+.artist-image {
+  
+}
+.spotlight-title {
+  margin-top: 5px;
+  text-align: center;
+  text-decoration: underline;
+  clear: none;
+}
+.spotlight-subtitle {
+  margin-top: 15px;
+  font-size: 22px;
+}
+.artists-title {
+  margin-top: 0px;
+}
 .col-md-8{
   padding-left: 20px;
   margin-left: 20px;
+}
+.artists-bio {
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-left: 0px;
+}
+.home-category {
+  background-color: #262626;
+  height: 35px;
+  color: white;
+  padding-left: 10px;
+  padding-top: 5px;
+  border-top: 2px solid #ff7300;
+}
+.spotlight-glyp{
+  text-decoration: none;
+  padding-left: 10px;
+}
+.spotlight-image {
+  border: outset 2px #262626;
+  margin-bottom: 10px;
+}
+.spotlight-space {
+  text-decoration: none;
+}
+.artist-search-bar {
+  margin-bottom: 15px;
 }
 
 body {
@@ -35,20 +80,25 @@ html {
 
 .title-wrap {
   display: inline-block;
-  height: 32px;
+  height: 40px;
 }
 
 .title-text {
-  font-size: 28px;
+  font-size: 35px;
   padding: 0 0 0 0;
   margin: 0 0 0 0;
-  color: inherit;
+  color: #ff7300;
+}
+
+.title2 {
+  color: white;
 }
 
 .title-text:hover {
   color: inherit;
   text-decoration: none;
-  font-weight: bold;
+/*  font-weight: bold;*/
+  color: #ff7300;
 }
 
 .body-container {
@@ -61,8 +111,6 @@ html {
   margin-top: 15px;
   margin-left: 0px;
   margin-right: 0px;
-
-  background-color: purple;
 }
 
 .navbar-list-final {
@@ -76,14 +124,14 @@ html {
   text-align: center;
 }
 
+#navbar {
+  border: 1px solid #bbb;
+}
+
 
 .container-fluid {
-  padding-left: 50px;
-  padding-right: 50px;
-}
-.col-md-12 {
-    padding-left: 0px;
-  padding-right: 0px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .nav {
@@ -99,6 +147,14 @@ html {
 
 .nav-li-final {
   width: 25%;
+  font-weight: bold;
+  font-size: 17px;
+}
+
+#navbar > .nav > .nav-li-final > a:hover {
+  color: #ff7300;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .item > img {
@@ -108,22 +164,80 @@ html {
 .regular-content {
   padding-left: 0px;
   padding-right: 0px;
-  border: 1px black solid;
   border-radius: 5px;
   height: 100%;
 }
-
+.col-md-12 {
+    padding-left: 0px;
+    padding-right: 5px;
+}
+.map-wrap {
+  padding-right: auto;
+  padding-left: auto;
+  text-align: center;
+}
+.artists-media {
+  border: 1px black solid;
+  border-radius: 5px;
+  padding-left: 15px;
+  margin-right: 0px;
+}
+.artists-pic-container {
+  border: 1px black solid;
+  border-radius: 5px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
+.artists-pic {
+  padding-left: auto;
+  text-align: center;
+  padding-right: auto;
+}
 .content-block {
-  /*border: 1px solid black;*/
-  height: 100%;
+  /*border-right: 1px solid #ccc;*/
+  height: 100%;  
+  border-radius: 11px;
+}
+.content-block:first-child {
+  padding-left: 0px;
+}
 
+.story {
+/*  border: 1px #262626 solid;*/
+  border-radius: 11px;
+
+}
+
+.content-block:last-child {
+  border-right: none;
 }
 
 .content-title {
-  text-decoration: underline;
+/*  text-decoration: underline;*/
+  margin-top: 0px;
+}
+
+.content-header {
+  margin: 0 0 0 0;
+  font-style: 15.25px;
+  font-weight: bold;
+}
+
+.content-header:hover {
+  margin: 0 0 0 0;
+  font-style: 15.25px;
+  color: #ff7300;
 }
 
 .content-line {
+  margin: 0 0 0 0;
+  font-size: 15.25px;
+  color: black;
+}
+
+.content-subline {
+  font-style: 14px;
+  color: #777;
   margin: 0 0 0 0;
 }
 
@@ -147,6 +261,7 @@ html {
 
 .content-paragraph {
   float: left;
+  width: 210px;
   margin-left: 10px;
 }
 .clear  {
@@ -163,13 +278,47 @@ html {
 }
 
 .spotlight {
-  border: 1px solid black;
+  border: 1px solid #262626;
   border-radius: 5px;
   height: 100%;
-}
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-bottom: 15px;
+  }
 
 .content-subtitle {
 
+}
+.event-info {
+  padding-top: 10px;
+}
+.event-listing {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.event-listing img {
+  border-radius: 10px;
+}
+.listing-date {
+  text-align: center;
+  height: 100%;
+  margin-top: -11px;
+  margin-bottom: -11px;
+  height: 72px;
+  margin-right: -1px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border: 2px solid #262626;
+  padding-left: 0px;
+  padding-right: 0px;
+  background-color: #ccc;
+}
+.listing-date-top {
+  border-bottom: 2px solid #262626;
+  margin-bottom: 5px;
+  color: #ff7300;
+  padding-top: 10px;
 }
 
 .clickable-div {
@@ -180,23 +329,24 @@ html {
 .clickable-div:hover {
   color: inherit;
   text-decoration: none;
-  font-weight: bold;
+  background-color: #ddd;
+  color: #ff7300;
 }
 
 .footer {
   text-align: center;
   margin-top: 30px;
-  background-color: gray;
+  background-color: #ccc;
   height: 10px;
   padding-top: 15px;
 }
 
 .footer > .container > .text-muted {
-  color: white;
+  color: #777;
 }
 
 .footer > .container > .text-muted > a{
-  color: lightblue;
+ 
   
 }
 
@@ -217,4 +367,185 @@ html {
 #navbar {
   padding-left: 0px;
   padding-right: 0px;
+}
+
+.top-event {
+  /*border: 1px gray solid;*/
+  padding-top: 0px;
+  padding-bottom: 10px;
+  text-align: center;
+  border-radius: 5px;
+}
+.top-event > img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.top-event > a {
+  margin-top: 10px;
+  height: 40px;
+  width: 111px;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+}
+
+.top-event > p:first-child {
+  font-size: 15px;
+}
+
+.event-listings {
+/*  border: 1px gray solid;*/
+  border-radius: 5px;
+  padding-left: 0px;
+}
+
+.side-bar {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.listings {
+  margin-top: 15px;
+}
+.footer {
+
+}
+     html,
+      body {
+        height: 100%;
+        /* The html and body elements cannot have any padding or margin. */
+      }
+
+      /* Wrapper for page content to push down footer */
+      #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -60px;
+      }
+
+      /* Set the fixed height of the footer here */
+      #push,
+      #footer {
+        height: 45px;
+      }
+      #footer {
+        background-color: #f5f5f5;
+      }
+
+      /* Lastly, apply responsive CSS fixes as necessary */
+      @media (max-width: 767px) {
+        #footer {
+          margin-left: -20px;
+          margin-right: -20px;
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+      }
+.spacer {
+  margin-top: 15px;
+}
+
+.top-line {
+  background-color: #ff7300;
+  height: 2px;
+}
+
+.featured-news {
+  height: 400px;
+}
+
+.news-row {
+  margin-top: 25px;
+}
+
+.top-event:hover {
+  background-color: #ddd;
+}
+
+.top-events-row {
+    margin-bottom: 25px;
+}
+
+.news-text {
+  .padding-top: 0px;
+}
+
+.news-line {
+  margin-bottom: 15px;
+  height: 80px;
+}
+
+.news-line img {
+  border-radius: 10px;
+}
+
+.top-news {
+  height: 264px;
+  text-align: left;
+}
+
+.news-paragraph {
+  margin-top: 5px;
+}
+
+.news-header {
+  font-size: 17px;
+}
+
+.info-major {
+  border: 1px solid black;
+  height: 600px;
+  border-radius: 5px;
+}
+
+.info-header {
+  border-bottom: 1px solid black;
+  margin-left: -15px;
+  margin-right: -15px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  height: 45px;
+  padding-left: 15px;
+  padding-top: 5px;
+  font-size: 25px;
+  background-color: #333;
+  color: white;
+}
+
+.info-text-section {
+  padding-top: 15px;
+  padding-left: 0px;
+}
+
+.info-image-section {
+  padding-top: 15px;
+  margin-left: -15px;
+}
+
+.info-image-section > img{
+  border-radius: 10px;
+}
+
+.info-subtitle {
+  font-size: 20px;
+}
+
+.info-text-para {
+  font-size: 18px;
+}
+
+.info-link {
+  font-size: 18px;
+}
+
+.similiar-stories {
+  border-radius: 5px;
+}
+
+.info-image-section {
+  width: auto;
 }
