--- a/css/search.css
+++ b/css/search.css
@@ -1,17 +1,20 @@
 	#tfheader{
 		padding-bottom: 5px;
 		padding-top: 5px;
-		background-color: gray;
+		background-color: #262626;
+		color: white;
 	}
+
 	#tfnewsearch{
 		display: inline-block;
 		float: right;
+		padding-top: 3px;
 	}
 	.tftextinput2{
 		margin: 0;
 		padding: 5px 15px;
 		font-family: Arial, Helvetica, sans-serif;
-		font-size:14px;
+		font-size:17px;
 		color:#666;
 		border:1px solid #0076a3; border-right:0px;
 		border-top-left-radius: 5px 5px;
@@ -21,27 +24,71 @@
 		margin: 0;
 		padding: 5px 7px;
 		font-family: Arial, Helvetica, sans-serif;
-		font-size:14px;
+		font-size:17px;
 		font-weight:bold;
 		outline: none;
 		cursor: pointer;
 		text-align: center;
 		text-decoration: none;
 		color: #ffffff;
-		border: solid 1px #0076a3; border-right:0px;
-		background: #0095cd;
-		background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
+		border: none;
+		background: #ff7300;
 		background: -moz-linear-gradient(top,  #00adee,  #0078a5);
 		border-top-right-radius: 5px 5px;
 		border-bottom-right-radius: 5px 5px;
 	}
 	.tfbutton2:hover {
 		text-decoration: none;
-		background: #007ead;
-		background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
+		background: #ff8300;
 		background: -moz-linear-gradient(top,  #0095cc,  #00678e);
 	}
 	/* Fixes submit button height problem in Firefox */
 	.tfbutton2::-moz-focus-inner {
 	  border: 0;
 	}
+
+	.search-bar {
+		margin-top: 10px;
+	}
+	.searchfield1 {
+		height: 40px;
+		padding: 5px 15px;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size:20px;
+		color:#999;
+		width: 61%;
+		border:1px solid #ccc;
+		border-radius: 5px;
+		/* margin-right: 1%; */
+	}
+
+.searchfield2 {
+	height: 40px;
+	padding: 5px 15px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size:20px;
+	color:#999;
+	width: 28%;
+	border:1px solid #ccc;
+	border-radius: 5px;
+	background-color: white;
+	/*margin-right: 1%;*/
+}
+
+.searchsubmit {
+	height: 40px;
+	/*padding: 5px 15px;*/
+	font-family: Arial, Helvetica, sans-serif;
+	font-size:20px;
+	color:white;
+	/*background-color: #262626;*/
+	background-color: #ff7300;
+	width: 10%;
+	border-radius: 5px;
+	border: none;
+}
+
+.searchsubmit:hover {
+	background-color: #ff8300;
+}
+
